syntax = "proto3";

package modelCommon;

// This is an internal utility message being used to generate page_token.
message PaginationOption {
  string parent = 1;
  int64 page_size = 2;
  // To indicate where were left from previous list. Could be offset other more
  // sophisticated info.
  int64 watermark = 3;
  string order_by = 4;
  string filter = 5;
}
